staging/api-definitions/security-policy.yaml
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: basic-auth-policy
spec:
  access_rights_array:
    - name: httpbin
      namespace: default
      versions:
        - Default
  active: true
  name: jwt-policy
  state: active
  basic_auth_data": 
    - "password": "mickey-mouse"
